Fixed the issue of the true and false buttons not showing up after selecting to generate the question. Now all features work, however I need to update the CSS to be visually appealing, also seems to have a bug issue where selecting either true or false button will always return a false input.

--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,11 @@ html {
 }
 
 .trueButton {
-    margin-right: 20px;
+    /*margin-right: 20px;
     font: "SF Pro", sans-serif;
     font-weight: bold;
     font-size: 16px;
-    color:#1d1d1f;
+    color:#ffffff;
     
     border: 2px solid white;
     background-color: white;
@@ -38,15 +38,15 @@ html {
 
     background-repeat: no-repeat;
     background-position: right 10px center;
-    background-size: 20px;
+    background-size: 20px;*/
 }
 
 .falseButton {
-    margin-left: 20px;
+    /*margin-left: 20px;
     font: "SF Pro", sans-serif;
     font-weight: bold;
     font-size: 16px;
-    color:#1d1d1f;
+    color:#ffffff;
 
     border-radius: 30px;
     border: 2px solid white;
@@ -58,7 +58,7 @@ html {
 
     background-repeat: no-repeat;
     background-position: right 10px center;
-    background-size: 20px;
+    background-size: 20px;*/
 }
 
 section {
